Project init with java, docker and other configuration